--- a/reference.bib
+++ b/reference.bib
@@ -73,6 +73,14 @@
   organization={ACM}
 }
 
+@InProceedings{Hamilton2007An,
+  author = {Hamilton, James},
+  title = {An Architecture for Modular Data Centers},
+  booktitle = {CIDR},
+  month = {January},
+  year = {2007}
+}
+
 @article{farrington2011helios,
   title={Helios: a hybrid electrical/optical switch architecture for modular data centers},
   author={Farrington, Nathan and Porter, George and Radhakrishnan, Sivasankar and Bazzaz, Hamid Hajabdolali and Subramanya, Vikram and Fainman, Yeshaiahu and Papen, George and Vahdat, Amin},
