--- a/reference.bib
+++ b/reference.bib
@@ -215,6 +215,32 @@
   primaryclass = {math.OC},
 }
 
+@article{Boyd2011ADMM,
+  author = {Boyd, Stephen and Parikh, Neal and Chu, Eric and Peleato, Borja and Eckstein, Jonathan},
+  title = {Distributed optimization and statistical learning via the alternating direction method of multipliers},
+  journal = {Foundations and Trends in Machine Learning},
+  year = {2011},
+  volume = {3},
+  number = {1},
+  pages = {1--122},
+  publisher = {ACM}
+}
+
+@Inbook{ConvexOptimization,
+  author={Boyd, Stephen and Vandenberghe, Lieven},
+  title={Convex Optimization},
+  year={2004},
+  publisher={Cambridge University Press},
+}
+
+@Inbook{SubgradientMethod,
+  author={Shor, Naum Z.},
+  title={Minimization Methods for Non-differentiable Functions},
+  year={1985},
+  publisher={Springer-Verlag},
+  address={New York}
+}
+
 @inproceedings{osqp-codegen,
   author = {Banjac, G. and Stellato, B. and Moehle, N. and Goulart, P. and Bemporad, A. and Boyd, S.},
   title = {Embedded code generation using the {OSQP} solver},
