--- a/reference.bib
+++ b/reference.bib
@@ -647,3 +647,8 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year = {1988}
 }
 
+@misc{SubgradientForm,
+  key = "subgradient",
+  author   = {{Wikipedia}},
+  title     = {https://en.wikipedia.org/wiki/Subgradient\_method}
+}
