--- a/reference.bib
+++ b/reference.bib
@@ -648,7 +648,13 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @misc{SubgradientForm,
-  key = "subgradient",
+  key = {subgradient},
   author   = {{Wikipedia}},
   title     = {https://en.wikipedia.org/wiki/Subgradient\_method}
+}
+
+@misc{Calient,
+  key =  {OCS},
+  author = {{Calient}},
+  title = {https://www.calient.net}
 }
