--- a/reference.bib
+++ b/reference.bib
@@ -652,3 +652,15 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   author   = {{Wikipedia}},
   title     = {https://en.wikipedia.org/wiki/Subgradient\_method}
 }
+
+@article{leiserson1985fat,
+  title={Fat-trees: universal networks for hardware-efficient supercomputing},
+  author={Leiserson, Charles E},
+  journal={IEEE transactions on Computers},
+  volume={100},
+  number={10},
+  pages={892--901},
+  year={1985},
+  publisher={IEEE}
+}
+
