--- a/reference.bib
+++ b/reference.bib
@@ -653,6 +653,12 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title     = {https://en.wikipedia.org/wiki/Subgradient\_method}
 }
 
+@misc{CosineSimilarity,
+  key = {cosinesimilarity},
+  author   = {{Wikipedia}},
+  title     = {https://en.wikipedia.org/wiki/Cosine\_similarity}
+}
+
 @article{leiserson1985fat,
   title={Fat-trees: universal networks for hardware-efficient supercomputing},
   author={Leiserson, Charles E},
