--- a/reference.bib
+++ b/reference.bib
@@ -670,3 +670,12 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   publisher={IEEE}
 }
 
+@inproceedings{zhang2005optimal,
+  title={Optimal routing with multiple traffic matrices tradeoff between average and worst case performance},
+  author={Zhang, Chun and Ge, Zihui and Kurose, Jim and Liu, Yong and Towsley, Don},
+  booktitle={Network Protocols, 2005. ICNP 2005. 13th IEEE International Conference on},
+  pages={10--pp},
+  year={2005},
+  organization={IEEE}
+}
+
