--- a/reference.bib
+++ b/reference.bib
@@ -679,3 +679,13 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   organization={IEEE}
 }
 
+@inproceedings{zhang2014load,
+  title={Load balancing for multiple traffic matrices using SDN hybrid routing},
+  author={Zhang, Junjie and Xi, Kang and Luo, Min and Chao, H Jonathan},
+  booktitle={High Performance Switching and Routing (HPSR), 2014 IEEE 15th International Conference on},
+  pages={44--49},
+  year={2014},
+  organization={IEEE}
+}
+
+
