--- a/reference.bib
+++ b/reference.bib
@@ -10,16 +10,16 @@
 @inproceedings{ghobadi2016projector,
   title={Projector: Agile reconfigurable data center interconnect},
   author={Ghobadi, Monia and Mahajan, Ratul and Phanishayee, Amar and Devanur, Nikhil and Kulkarni, Janardhan and Ranade, Gireeja and Blanche, Pierre-Alexandre and Rastegarfar, Houman and Glick, Madeleine and Kilper, Daniel},
-  booktitle={Proceedings of the 2016 ACM SIGCOMM Conference},
+  booktitle={Proc. SIGCOMM},
   pages={216--229},
   year={2016},
   organization={ACM}
 }
 
 @inproceedings{singla2012jellyfish,
-  title={Jellyfish: Networking Data Centers, Randomly.},
+  title={Jellyfish: Networking Data Centers, Randomly},
   author={Singla, Ankit and Hong, Chi-Yao and Popa, Lucian and Godfrey, Philip Brighten},
-  booktitle={NSDI},
+  booktitle={Proc. NSDI},
   volume={12},
   pages={1--6},
   year={2012}
@@ -56,9 +56,7 @@
 @inproceedings{hamedazimi2014firefly,
   title={Firefly: A reconfigurable wireless data center fabric using free-space optics},
   author={Hamedazimi, Navid and Qazi, Zafar and Gupta, Himanshu and Sekar, Vyas and Das, Samir R and Longtin, Jon P and Shah, Himanshu and Tanwer, Ashish},
-  booktitle={ACM SIGCOMM Computer Communication Review},
-  volume={44},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={319--330},
   year={2014},
   organization={ACM}
@@ -81,12 +79,10 @@
   year = {2007}
 }
 
-@article{farrington2011helios,
+@inproceedings{farrington2011helios,
   title={Helios: a hybrid electrical/optical switch architecture for modular data centers},
   author={Farrington, Nathan and Porter, George and Radhakrishnan, Sivasankar and Bazzaz, Hamid Hajabdolali and Subramanya, Vikram and Fainman, Yeshaiahu and Papen, George and Vahdat, Amin},
-  journal={ACM SIGCOMM Computer Communication Review},
-  volume={41},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={339--350},
   year={2011},
   publisher={ACM}
@@ -115,7 +111,7 @@
 @inproceedings{delimitrou2012echo,
   title={ECHO: Recreating network traffic maps for datacenters with tens of thousands of servers},
   author={Delimitrou, Christina and Sankar, Sriram and Kansal, Aman and Kozyrakis, Christos},
-  booktitle={Workload Characterization (IISWC), 2012 IEEE International Symposium on},
+  booktitle={Proc. 2012 IEEE International Symposium on Workload Characterization (IISWC)},
   pages={14--24},
   year={2012},
   organization={IEEE}
@@ -161,7 +157,7 @@
 
 
 @inproceedings{papaioannou2016benefits,
-  title={The Benefits of a Disaggregated Data Centre: A Resource Allocation Approach.},
+  title={The Benefits of a Disaggregated Data Centre: A Resource Allocation Approach},
   author={Papaioannou, Antonios D and Nejabati, Reza and Simeonidou, Dimitra},
   booktitle={GLOBECOM},
   pages={1--7},
@@ -177,8 +173,9 @@
   organization={Springer}
 }
 
-@article{foerster2018characterizing,
+@inproceedings{foerster2018characterizing,
   title={Characterizing the algorithmic complexity of reconfigurable data center architectures},
+  booktitle={Proc. ANCS},
   author={Foerster, Klaus-Tycho and Ghobadi, Manya and Schmid, Stefan},
   year={2018}
 }
@@ -186,7 +183,7 @@
 @inproceedings{zhao2018minimal,
   title={Minimal Rewiring: Efficient Live Expansion for Clos Data Center Networks},
   author={Zhao, Shizhen and Wang, Rui and Zhou, Junlan and Ong, Joon and Mogul, Jeffrey. C and Vahdat, Amin},
-  booktitle={NSDI},
+  booktitle={Proc. NSDI},
   year={2019},
 }
 
@@ -298,8 +295,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{al2008scalable,
   title={A scalable, commodity data center network architecture},
   author={Al-Fares, Mohammad and Loukissas, Alexander and Vahdat, Amin},
-  booktitle={ACM SIGCOMM Computer Communication Review},
-  volume={38},
+  booktitle={Proc. SIGCOMM},
   number={4},
   pages={63--74},
   year={2008},
@@ -316,10 +312,9 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{reactor_liu2014,
-  title={Circuit Switching Under the Radar with REACToR.},
+  title={Circuit Switching Under the Radar with REACToR},
   author={Liu, He and Lu, Feng and Forencich, Alex and Kapoor, Rishi and Tewari, Malveeka and Voelker, Geoffrey M and Papen, George and Snoeren, Alex C and Porter, George},
-  booktitle={Nsdi},
-  volume={14},
+  booktitle={Proc. NSDI},
   pages={1--15},
   year={2014}
 }
@@ -334,9 +329,9 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{liu2010scaling,
-  title={Scaling optical interconnects in datacenter networks opportunities and challenges for WDM},
-  author={Liu, Hong and Lam, Cedric F and Johnson, Chris},
-  booktitle={High Performance Interconnects (HOTI), 2010 IEEE 18th Annual Symposium on},
+  title={Scaling optical interconnects in datacenter networks -- opportunities and challenges for WDM},
+  author={Liu, Hong and Lam, Cedric F. and Johnson, Chris},
+  booktitle={IEEE 18th Annual Symposium on High Performance Interconnects (HOTI)},
   pages={113--116},
   year={2010},
   organization={IEEE}
@@ -362,12 +357,10 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   publisher={Chinese Optical Society}
 }
 
-@article{cthrough_wang_2011,
+@inproceedings{cthrough_wang_2011,
   title={c-Through: Part-time optics in data centers},
   author={Wang, Guohui and Andersen, David G and Kaminsky, Michael and Papagiannaki, Konstantina and Ng, TS and Kozuch, Michael and Ryan, Michael},
-  journal={ACM SIGCOMM Computer Communication Review},
-  volume={41},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={327--338},
   year={2011},
   publisher={ACM}
@@ -392,11 +385,9 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{singh2015jupiter,
-  title={Jupiter rising: A decade of clos topologies and centralized control in google's datacenter network},
+  title={{Jupiter Rising: A Decade of Clos Topologies and Centralized Control in Google's Datacenter Network}},
   author={Singh, Arjun and Ong, Joon and Agarwal, Amit and Anderson, Glen and Armistead, Ashby and Bannon, Roy and Boving, Seb and Desai, Gaurav and Felderman, Bob and Germano, Paulie and others},
-  booktitle={ACM SIGCOMM Computer Communication Review},
-  volume={45},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={183--197},
   year={2015},
   organization={ACM}
@@ -424,12 +415,10 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   publisher={IEEE}
 }
 
-@article{zhou2012mirror,
+@inproceedings{zhou2012mirror,
   title={Mirror mirror on the ceiling: Flexible wireless links for data centers},
   author={Zhou, Xia and Zhang, Zengbin and Zhu, Yibo and Li, Yubo and Kumar, Saipriya and Vahdat, Amin and Zhao, Ben Y and Zheng, Haitao},
-  journal={ACM SIGCOMM Computer Communication Review},
-  volume={42},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={443--454},
   year={2012},
   publisher={ACM}
@@ -447,7 +436,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{kim2008dragonfly,
   title={Technology-driven, highly-scalable dragonfly topology},
   author={Kim, John and Dally, Wiliam J and Scott, Steve and Abts, Dennis},
-  booktitle={Computer Architecture, 2008. ISCA'08. 35th International Symposium on},
+  booktitle={Proc. 35th International Symposium on Computer Architecture (ISCA)},
   pages={77--88},
   year={2008},
   organization={IEEE}
@@ -465,18 +454,16 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{ahn2009hyperx,
   title={HyperX: topology, routing, and packaging of efficient large-scale networks},
   author={Ahn, Jung Ho and Binkert, Nathan and Davis, Al and McLaren, Moray and Schreiber, Robert S},
-  booktitle={Proceedings of the Conference on High Performance Computing Networking, Storage and Analysis},
+  booktitle={Proceedings of the Conference on High Performance Computing, Networking, Storage and Analysis},
   pages={41},
   year={2009},
   organization={ACM}
 }
 
-@article{guo2009bcube,
+@inproceedings{guo2009bcube,
   title={BCube: a high performance, server-centric network architecture for modular data centers},
   author={Guo, Chuanxiong and Lu, Guohan and Li, Dan and Wu, Haitao and Zhang, Xuan and Shi, Yunfeng and Tian, Chen and Zhang, Yongguang and Lu, Songwu},
-  journal={ACM SIGCOMM Computer Communication Review},
-  volume={39},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={63--74},
   year={2009},
   publisher={ACM}
@@ -485,9 +472,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{guo2008dcell,
   title={Dcell: a scalable and fault-tolerant network structure for data centers},
   author={Guo, Chuanxiong and Wu, Haitao and Tan, Kun and Shi, Lei and Zhang, Yongguang and Lu, Songwu},
-  booktitle={ACM SIGCOMM Computer Communication Review},
-  volume={38},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={75--86},
   year={2008},
   organization={ACM}
@@ -496,18 +481,16 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{greenberg2009vl2,
   title={VL2: a scalable and flexible data center network},
   author={Greenberg, Albert and Hamilton, James R and Jain, Navendu and Kandula, Srikanth and Kim, Changhoon and Lahiri, Parantap and Maltz, David A and Patel, Parveen and Sengupta, Sudipta},
-  booktitle={ACM SIGCOMM computer communication review},
-  volume={39},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={51--62},
   year={2009},
   organization={ACM}
 }
 
 @inproceedings{liu2013f10,
-  title={F10: A Fault-Tolerant Engineered Network.},
+  title={F10: A Fault-Tolerant Engineered Network},
   author={Liu, Vincent and Halperin, Daniel and Krishnamurthy, Arvind and Anderson, Thomas E},
-  booktitle={NSDI},
+  booktitle={Proc. NSDI},
   pages={399--412},
   year={2013}
 }
@@ -543,11 +526,11 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   publisher={IEEE}
 }
 
-@article{kandula2009flyways,
+@inproceedings{kandula2009flyways,
   title={Flyways to de-congest data center networks},
+  booktitle={Proc. HotNets},
   author={Kandula, Srikanth and Padhye, Jitendra and Bahl, Paramvir},
   year={2009},
-  publisher={Citeseer}
 }
 
 @inproceedings{kandula2009nature,
@@ -573,9 +556,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{roy2015facebook,
   title={Inside the social network's (datacenter) network},
   author={Roy, Arjun and Zeng, Hongyi and Bagga, Jasmeet and Porter, George and Snoeren, Alex C},
-  booktitle={ACM SIGCOMM Computer Communication Review},
-  volume={45},
-  number={4},
+  booktitle={Proc. SIGCOMM},
   pages={123--137},
   year={2015},
   organization={ACM}
@@ -604,7 +585,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{chen2009incast,
   title={Understanding TCP incast throughput collapse in datacenter networks},
   author={Chen, Yanpei and Griffith, Rean and Liu, Junda and Katz, Randy H and Joseph, Anthony D},
-  booktitle={Proceedings of the 1st ACM workshop on Research on enterprise networking},
+  booktitle={Proceedings of the 1st ACM Workshop on Research on Enterprise Networking},
   pages={73--82},
   year={2009},
   organization={ACM}
@@ -650,13 +631,13 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @misc{SubgradientForm,
   key = {subgradient},
   author   = {{Wikipedia}},
-  title     = {https://en.wikipedia.org/wiki/Subgradient\_method}
+  title     = {\url{https://en.wikipedia.org/wiki/Subgradient\_method}}
 }
 
 @misc{CosineSimilarity,
   key = {cosinesimilarity},
   author   = {{Wikipedia}},
-  title     = {https://en.wikipedia.org/wiki/Cosine\_similarity}
+  title     = {\url{https://en.wikipedia.org/wiki/Cosine\_similarity}}
 }
 
 @article{leiserson1985fat,
@@ -673,7 +654,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{zhang2005optimal,
   title={Optimal routing with multiple traffic matrices tradeoff between average and worst case performance},
   author={Zhang, Chun and Ge, Zihui and Kurose, Jim and Liu, Yong and Towsley, Don},
-  booktitle={Network Protocols, 2005. ICNP 2005. 13th IEEE International Conference on},
+  booktitle={International Conference on Network Protocols (ICNP)},
   pages={10--pp},
   year={2005},
   organization={IEEE}
@@ -682,7 +663,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{zhang2014load,
   title={Load balancing for multiple traffic matrices using SDN hybrid routing},
   author={Zhang, Junjie and Xi, Kang and Luo, Min and Chao, H Jonathan},
-  booktitle={High Performance Switching and Routing (HPSR), 2014 IEEE 15th International Conference on},
+  booktitle={15th International Conference on High Performance Switching and Routing (HPSR)},
   pages={44--49},
   year={2014},
   organization={IEEE}
