--- a/reference.bib
+++ b/reference.bib
@@ -29,9 +29,8 @@
   title={Xpander: Unveiling the Secrets of High-Performance Datacenters},
   author={Valadarsky, Asaf and Dinitz, Michael and Schapira, Michael},
   booktitle={Proceedings of the 14th ACM Workshop on Hot Topics in Networks},
-  pages={16},
   year={2015},
-  organization={ACM}
+  month={November}
 }
 
 @article{dinitz2017explicit,
