--- a/reference.bib
+++ b/reference.bib
@@ -640,6 +640,12 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title     = {\url{https://en.wikipedia.org/wiki/Cosine\_similarity}}
 }
 
+@misc{BoxPlot,
+  key = {boxplot},
+  author = {{Wikipedia}},
+  title = {\url{https://en.wikipedia.org/wiki/Box_plot}}
+}
+
 @article{leiserson1985fat,
   title={Fat-trees: universal networks for hardware-efficient supercomputing},
   author={Leiserson, Charles E},
