--- a/reference.bib
+++ b/reference.bib
@@ -2,26 +2,20 @@
   title={Flexfly: Enabling a reconfigurable dragonfly through silicon photonics},
   author={Wen, Ke and Samadi, Payman and Rumley, S{\'e}bastien and Chen, Christine P and Shen, Yiwen and Bahadori, Meisam and Bergman, Keren and Wilke, Jeremiah},
   booktitle={High Performance Computing, Networking, Storage and Analysis, SC16: International Conference for},
-  pages={166--177},
-  year={2016},
-  organization={IEEE}
+  year={2016}
 }
 
 @inproceedings{ghobadi2016projector,
   title={Projector: Agile reconfigurable data center interconnect},
   author={Ghobadi, Monia and Mahajan, Ratul and Phanishayee, Amar and Devanur, Nikhil and Kulkarni, Janardhan and Ranade, Gireeja and Blanche, Pierre-Alexandre and Rastegarfar, Houman and Glick, Madeleine and Kilper, Daniel},
-  booktitle={Proc. SIGCOMM},
-  pages={216--229},
-  year={2016},
-  organization={ACM}
+  booktitle={SIGCOMM},
+  year={2016}
 }
 
 @inproceedings{singla2012jellyfish,
   title={Jellyfish: Networking Data Centers, Randomly},
   author={Singla, Ankit and Hong, Chi-Yao and Popa, Lucian and Godfrey, Philip Brighten},
-  booktitle={Proc. NSDI},
-  volume={12},
-  pages={1--6},
+  booktitle={NSDI},
   year={2012}
 }
 
@@ -55,10 +49,9 @@
 @inproceedings{hamedazimi2014firefly,
   title={Firefly: A reconfigurable wireless data center fabric using free-space optics},
   author={Hamedazimi, Navid and Qazi, Zafar and Gupta, Himanshu and Sekar, Vyas and Das, Samir R and Longtin, Jon P and Shah, Himanshu and Tanwer, Ashish},
-  booktitle={Proc. SIGCOMM},
+  booktitle={SIGCOMM},
   pages={319--330},
-  year={2014},
-  organization={ACM}
+  year={2014}
 }
 
 @inproceedings{liu2015scheduling,
@@ -81,10 +74,8 @@
 @inproceedings{farrington2011helios,
   title={Helios: a hybrid electrical/optical switch architecture for modular data centers},
   author={Farrington, Nathan and Porter, George and Radhakrishnan, Sivasankar and Bazzaz, Hamid Hajabdolali and Subramanya, Vikram and Fainman, Yeshaiahu and Papen, George and Vahdat, Amin},
-  booktitle={Proc. SIGCOMM},
-  pages={339--350},
-  year={2011},
-  publisher={ACM}
+  booktitle={SIGCOMM},
+  year={2011}
 }
 
 @article{irving1994three,
@@ -111,7 +102,6 @@
   title={ECHO: Recreating network traffic maps for datacenters with tens of thousands of servers},
   author={Delimitrou, Christina and Sankar, Sriram and Kansal, Aman and Kozyrakis, Christos},
   booktitle={Proc. 2012 IEEE International Symposium on Workload Characterization (IISWC)},
-  pages={14--24},
   year={2012},
   organization={IEEE}
 }
@@ -129,18 +119,14 @@
   title={Understanding data center traffic characteristics},
   author={Benson, Theophilus and Anand, Ashok and Akella, Aditya and Zhang, Ming},
   booktitle={Proceedings of the 1st ACM workshop on Research on enterprise networking},
-  pages={65--72},
-  year={2009},
-  organization={ACM}
+  year={2009}
 }
 
 @inproceedings{Qiao2013Efficient,
   title={Efficient traffic matrix estimation for data center networks},
   author={Qiao, Yan and Hu, Zhiming and Luo, Jun},
   booktitle={IFIP Networking Conference},
-  pages={1--9},
-  year={2013},
-  organization={IEEE}
+  year={2013}
 }
 
 @article{Mozo2018Forecasting,
@@ -159,7 +145,6 @@
   title={The Benefits of a Disaggregated Data Centre: A Resource Allocation Approach},
   author={Papaioannou, Antonios D and Nejabati, Reza and Simeonidou, Dimitra},
   booktitle={GLOBECOM},
-  pages={1--7},
   year={2016}
 }
 
@@ -167,7 +152,6 @@
   title={Topology-aware vm migration in bandwidth oversubscribed datacenter networks},
   author={Jain, Navendu and Menache, Ishai and Naor, Joseph Seffi and Shepherd, F Bruce},
   booktitle={International Colloquium on Automata, Languages, and Programming},
-  pages={586--597},
   year={2012},
   organization={Springer}
 }
@@ -182,7 +166,7 @@
 @inproceedings{zhao2018minimal,
   title={Minimal Rewiring: Efficient Live Expansion for Clos Data Center Networks},
   author={Zhao, Shizhen and Wang, Rui and Zhou, Junlan and Ong, Joon and Mogul, Jeffrey. C and Vahdat, Amin},
-  booktitle={Proc. NSDI},
+  booktitle={NSDI},
   year={2019},
 }
 
@@ -277,44 +261,34 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title={Finding critical traffic matrices},
   author={Zhang, Yin and Ge, Zihui},
   booktitle={Dependable Systems and Networks, 2005. DSN 2005. Proceedings. International Conference on},
-  pages={188--197},
-  year={2005},
-  organization={IEEE}
+  year={2005}
 }
 
 @inproceedings{zhou2014wcmp,
   title={WCMP: Weighted cost multipathing for improved fairness in data centers},
   author={Zhou, Junlan and Tewari, Malveeka and Zhu, Min and Kabbani, Abdul and Poutievski, Leon and Singh, Arjun and Vahdat, Amin},
   booktitle={Proceedings of the Ninth European Conference on Computer Systems},
-  pages={5},
-  year={2014},
-  organization={ACM}
+  year={2014}
 }
 
 @inproceedings{al2008scalable,
   title={A scalable, commodity data center network architecture},
   author={Al-Fares, Mohammad and Loukissas, Alexander and Vahdat, Amin},
-  booktitle={Proc. SIGCOMM},
-  number={4},
-  pages={63--74},
-  year={2008},
-  organization={ACM}
+  booktitle={SIGCOMM},
+  year={2008}
 }
 
 @inproceedings{rotornet_mellette2017,
   title={RotorNet: A scalable, low-complexity, optical datacenter network},
   author={Mellette, William M and McGuinness, Rob and Roy, Arjun and Forencich, Alex and Papen, George and Snoeren, Alex C and Porter, George},
   booktitle={Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
-  pages={267--280},
-  year={2017},
-  organization={ACM}
+  year={2017}
 }
 
 @inproceedings{reactor_liu2014,
   title={Circuit Switching Under the Radar with REACToR},
   author={Liu, He and Lu, Feng and Forencich, Alex and Kapoor, Rishi and Tewari, Malveeka and Voelker, Geoffrey M and Papen, George and Snoeren, Alex C and Porter, George},
-  booktitle={Proc. NSDI},
-  pages={1--15},
+  booktitle={NSDI},
   year={2014}
 }
 
@@ -322,27 +296,21 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title={The emerging optical data center},
   author={Vahdat, Amin and Liu, Hong and Zhao, Xiaoxue and Johnson, Chris},
   booktitle={Optical Fiber Communication Conference},
-  pages={OTuH2},
-  year={2011},
-  organization={Optical Society of America}
+  year={2011}
 }
 
 @inproceedings{liu2010scaling,
   title={Scaling optical interconnects in datacenter networks -- opportunities and challenges for WDM},
   author={Liu, Hong and Lam, Cedric F. and Johnson, Chris},
   booktitle={IEEE 18th Annual Symposium on High Performance Interconnects (HOTI)},
-  pages={113--116},
-  year={2010},
-  organization={IEEE}
+  year={2010}
 }
 
 @inproceedings{fields2010transceivers,
   title={Transceivers and optical engines for computer and datacenter interconnects},
   author={Fields, Mitchell H and Foley, John and Kaneshiro, Ron and McColloch, Larry and Meadowcroft, David and Miller, Frederick W and Nassar, Sami and Robinson, Michael and Xu, Hui},
   booktitle={Optical Fiber Communication Conference},
-  pages={OTuP1},
-  year={2010},
-  organization={Optical Society of America}
+  year={2010}
 }
 
 @article{zhou2017datacenter,
@@ -359,37 +327,29 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{cthrough_wang_2011,
   title={c-Through: Part-time optics in data centers},
   author={Wang, Guohui and Andersen, David G and Kaminsky, Michael and Papagiannaki, Konstantina and Ng, TS and Kozuch, Michael and Ryan, Michael},
-  booktitle={Proc. SIGCOMM},
-  pages={327--338},
-  year={2011},
-  publisher={ACM}
+  booktitle={SIGCOMM},
+  year={2011}
 }
 
 @book{porter2013integrating,
   title={Integrating microsecond circuit switching into the data center},
   author={Porter, George and Strong, Richard and Farrington, Nathan and Forencich, Alex and Chen-Sun, Pang and Rosing, Tajana and Fainman, Yeshaiahu and Papen, George and Vahdat, Amin},
-  volume={43},
-  number={4},
-  year={2013},
-  publisher={ACM}
+  booktitle={SIGCOMM},
+  year={2013}
 }
 
 @inproceedings{singla2010proteus,
   title={Proteus: a topology malleable data center network},
   author={Singla, Ankit and Singh, Atul and Ramachandran, Kishore and Xu, Lei and Zhang, Yueping},
   booktitle={Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
-  pages={8},
-  year={2010},
-  organization={ACM}
+  year={2010}
 }
 
 @inproceedings{singh2015jupiter,
   title={{Jupiter Rising: A Decade of Clos Topologies and Centralized Control in Google's Datacenter Network}},
   author={Singh, Arjun and Ong, Joon and Agarwal, Amit and Anderson, Glen and Armistead, Ashby and Bannon, Roy and Boving, Seb and Desai, Gaurav and Felderman, Bob and Germano, Paulie and others},
-  booktitle={Proc. SIGCOMM},
-  pages={183--197},
-  year={2015},
-  organization={ACM}
+  booktitle={SIGCOMM},
+  year={2015}
 }
 
 @article{bunnagel1998efficient,
@@ -417,79 +377,63 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{zhou2012mirror,
   title={Mirror mirror on the ceiling: Flexible wireless links for data centers},
   author={Zhou, Xia and Zhang, Zengbin and Zhu, Yibo and Li, Yubo and Kumar, Saipriya and Vahdat, Amin and Zhao, Ben Y and Zheng, Haitao},
-  booktitle={Proc. SIGCOMM},
-  pages={443--454},
-  year={2012},
-  publisher={ACM}
+  booktitle={SIGCOMM},
+  year={2012}
 }
 
 @inproceedings{teh2017design,
   title={Design space exploration of the Dragonfly topology},
   author={Teh, Min Yee and Wilke, Jeremiah J and Bergman, Keren and Rumley, S{\'e}bastien},
   booktitle={International Conference on High Performance Computing},
-  pages={57--74},
-  year={2017},
-  organization={Springer}
+  year={2017}
 }
 
 @inproceedings{kim2008dragonfly,
   title={Technology-driven, highly-scalable dragonfly topology},
   author={Kim, John and Dally, Wiliam J and Scott, Steve and Abts, Dennis},
   booktitle={Proc. 35th International Symposium on Computer Architecture (ISCA)},
-  pages={77--88},
-  year={2008},
-  organization={IEEE}
+  year={2008}
 }
 
 @inproceedings{besta2014slim,
   title={Slim fly: A cost effective low-diameter network topology},
   author={Besta, Maciej and Hoefler, Torsten},
   booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
-  pages={348--359},
-  year={2014},
-  organization={IEEE Press}
+  year={2014}
 }
 
 @inproceedings{ahn2009hyperx,
   title={HyperX: topology, routing, and packaging of efficient large-scale networks},
   author={Ahn, Jung Ho and Binkert, Nathan and Davis, Al and McLaren, Moray and Schreiber, Robert S},
   booktitle={Proceedings of the Conference on High Performance Computing, Networking, Storage and Analysis},
-  pages={41},
-  year={2009},
-  organization={ACM}
+  year={2009}
 }
 
 @inproceedings{guo2009bcube,
   title={BCube: a high performance, server-centric network architecture for modular data centers},
   author={Guo, Chuanxiong and Lu, Guohan and Li, Dan and Wu, Haitao and Zhang, Xuan and Shi, Yunfeng and Tian, Chen and Zhang, Yongguang and Lu, Songwu},
-  booktitle={Proc. SIGCOMM},
-  pages={63--74},
-  year={2009},
-  publisher={ACM}
+  booktitle={SIGCOMM},
+  year={2009}
 }
 
 @inproceedings{guo2008dcell,
   title={Dcell: a scalable and fault-tolerant network structure for data centers},
   author={Guo, Chuanxiong and Wu, Haitao and Tan, Kun and Shi, Lei and Zhang, Yongguang and Lu, Songwu},
-  booktitle={Proc. SIGCOMM},
-  pages={75--86},
-  year={2008},
-  organization={ACM}
+  booktitle={SIGCOMM},
+  year={2008}
 }
 
 @inproceedings{greenberg2009vl2,
   title={VL2: a scalable and flexible data center network},
   author={Greenberg, Albert and Hamilton, James R and Jain, Navendu and Kandula, Srikanth and Kim, Changhoon and Lahiri, Parantap and Maltz, David A and Patel, Parveen and Sengupta, Sudipta},
-  booktitle={Proc. SIGCOMM},
-  pages={51--62},
-  year={2009},
-  organization={ACM}
+  booktitle={SIGCOMM},
+  year={2009}
 }
 
 @inproceedings{liu2013f10,
   title={F10: A Fault-Tolerant Engineered Network},
   author={Liu, Vincent and Halperin, Daniel and Krishnamurthy, Arvind and Anderson, Thomas E},
-  booktitle={Proc. NSDI},
+  booktitle={NSDI},
   pages={399--412},
   year={2013}
 }
@@ -498,7 +442,6 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title = {Facebook's Data Center Network Architecture},
   author = {Farrington, Nathan and Andreyev, Alexey},
   journal = {IEEE Optical Interconnects Conference},
-  month = {May},
   year = {2013}
 }
 
@@ -536,9 +479,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title={The nature of data center traffic: measurements \& analysis},
   author={Kandula, Srikanth and Sengupta, Sudipta and Greenberg, Albert and Patel, Parveen and Chaiken, Ronnie},
   booktitle={Proceedings of the 9th ACM SIGCOMM conference on Internet measurement},
-  pages={202--208},
-  year={2009},
-  organization={ACM}
+  year={2009}
 }
 
 @inproceedings{atikoglu2012workload,
@@ -555,19 +496,15 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{roy2015facebook,
   title={Inside the social network's (datacenter) network},
   author={Roy, Arjun and Zeng, Hongyi and Bagga, Jasmeet and Porter, George and Snoeren, Alex C},
-  booktitle={Proc. SIGCOMM},
-  pages={123--137},
-  year={2015},
-  organization={ACM}
+  booktitle={SIGCOMM},
+  year={2015}
 }
 
 @inproceedings{benson2011microte,
   title={MicroTE: Fine grained traffic engineering for data centers},
   author={Benson, Theophilus and Anand, Ashok and Akella, Aditya and Zhang, Ming},
   booktitle={Proceedings of the Seventh COnference on emerging Networking EXperiments and Technologies},
-  pages={8},
-  year={2011},
-  organization={ACM}
+  year={2011}
 }
 
 @inproceedings{jiang2009indirect,
@@ -585,25 +522,20 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title={Understanding TCP incast throughput collapse in datacenter networks},
   author={Chen, Yanpei and Griffith, Rean and Liu, Junda and Katz, Randy H and Joseph, Anthony D},
   booktitle={Proceedings of the 1st ACM Workshop on Research on Enterprise Networking},
-  pages={73--82},
-  year={2009},
-  organization={ACM}
+  year={2009}
 }
 
 @inproceedings{ardelean2018performance,
   title={Performance Analysis of Cloud Applications},
   author={Ardelean, Dan and Diwan, Amer and Erdman, Chandra},
-  booktitle={15th USENIX Symposium on Networked Systems Design and Implementation (NSDI 18)},
-  year={2018},
-  organization={USENIX Association}
+  booktitle={NSDI},
+  year={2018}
 }
 
 @article{ghodsi2006dimensionality,
   title={Dimensionality reduction a short tutorial},
   author={Ghodsi, Ali},
   journal={Department of Statistics and Actuarial Science, Univ. of Waterloo, Ontario, Canada},
-  volume={37},
-  pages={38},
   year={2006}
 }
 
@@ -628,21 +560,21 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @misc{SubgradientForm,
-  key = {subgradient},
+  title = {Subgradient Method},
   author   = {{Wikipedia}},
   title     = {\url{https://en.wikipedia.org/wiki/Subgradient\_method}}
 }
 
 @misc{CosineSimilarity,
-  key = {cosinesimilarity},
+  title = {Cosine Similarity},
   author   = {{Wikipedia}},
   title     = {\url{https://en.wikipedia.org/wiki/Cosine\_similarity}}
 }
 
 @misc{BoxPlot,
-  key = {boxplot},
+  title = {Box Plot},
   author = {{Wikipedia}},
-  title = {\url{https://en.wikipedia.org/wiki/Box_plot}}
+  title = {\url{https://en.wikipedia.org/wiki/Box\_plot}}
 }
 
 @article{leiserson1985fat,
@@ -660,18 +592,14 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   title={Optimal routing with multiple traffic matrices tradeoff between average and worst case performance},
   author={Zhang, Chun and Ge, Zihui and Kurose, Jim and Liu, Yong and Towsley, Don},
   booktitle={International Conference on Network Protocols (ICNP)},
-  pages={10--pp},
-  year={2005},
-  organization={IEEE}
+  year={2005}
 }
 
 @inproceedings{zhang2014load,
   title={Load balancing for multiple traffic matrices using SDN hybrid routing},
   author={Zhang, Junjie and Xi, Kang and Luo, Min and Chao, H Jonathan},
   booktitle={15th International Conference on High Performance Switching and Routing (HPSR)},
-  pages={44--49},
-  year={2014},
-  organization={IEEE}
+  year={2014}
 }
 
 
