--- a/reference.bib
+++ b/reference.bib
@@ -102,8 +102,7 @@
   title={ECHO: Recreating network traffic maps for datacenters with tens of thousands of servers},
   author={Delimitrou, Christina and Sankar, Sriram and Kansal, Aman and Kozyrakis, Christos},
   booktitle={Proc. 2012 IEEE International Symposium on Workload Characterization (IISWC)},
-  year={2012},
-  organization={IEEE}
+  year={2012}
 }
 
 @inproceedings{benson2010network,
@@ -559,22 +558,22 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year = {1988}
 }
 
-@misc{SubgradientForm,
+@inproceedings{SubgradientForm,
   title = {Subgradient Method},
   author   = {{Wikipedia}},
-  title     = {\url{https://en.wikipedia.org/wiki/Subgradient\_method}}
+  booktitle     = {https://en.wikipedia.org/wiki/Subgradient\_method}
 }
 
-@misc{CosineSimilarity,
+@inproceedings{CosineSimilarity,
   title = {Cosine Similarity},
   author   = {{Wikipedia}},
-  title     = {\url{https://en.wikipedia.org/wiki/Cosine\_similarity}}
+  booktitle     = {https://en.wikipedia.org/wiki/Cosine\_similarity}
 }
 
-@misc{BoxPlot,
+@inproceedings{BoxPlot,
   title = {Box Plot},
   author = {{Wikipedia}},
-  title = {\url{https://en.wikipedia.org/wiki/Box\_plot}}
+  booktitle = {https://en.wikipedia.org/wiki/Box\_plot}
 }
 
 @article{leiserson1985fat,
