added a few new references

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,60 @@
+@inproceedings{kassing2017beyond,
+ author = {Kassing, Simon and Valadarsky, Asaf and Shahaf, Gal and Schapira, Michael and Singla, Ankit},
+ title = {Beyond Fat-trees Without Antennae, Mirrors, and Disco-balls},
+ booktitle = {Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
+ series = {SIGCOMM '17},
+ year = {2017},
+ isbn = {978-1-4503-4653-5},
+ location = {Los Angeles, CA, USA},
+ pages = {281--294},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/3098822.3098836},
+ doi = {10.1145/3098822.3098836},
+ acmid = {3098836},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Data center, Routing, Topology},
+} 
+
+@article{halperin2011augmenting,
+ author = {Halperin, Daniel and Kandula, Srikanth and Padhye, Jitendra and Bahl, Paramvir and Wetherall, David},
+ title = {Augmenting Data Center Networks with Multi-gigabit Wireless Links},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ issue_date = {August 2011},
+ volume = {41},
+ number = {4},
+ month = aug,
+ year = {2011},
+ issn = {0146-4833},
+ pages = {38--49},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2043164.2018442},
+ doi = {10.1145/2043164.2018442},
+ acmid = {2018442},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {60 ghz, 802.11ad, data center, datacenter, flyways, network},
+} 
+
+@article{dukkipati2006flowcompletiontime,
+ author = {Dukkipati, Nandita and McKeown, Nick},
+ title = {Why Flow-completion Time is the Right Metric for Congestion Control},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ issue_date = {January 2006},
+ volume = {36},
+ number = {1},
+ month = jan,
+ year = {2006},
+ issn = {0146-4833},
+ pages = {59--62},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1111322.1111336},
+ doi = {10.1145/1111322.1111336},
+ acmid = {1111336},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
 @inproceedings{wen2016flexfly,
   title={Flexfly: Enabling a reconfigurable dragonfly through silicon photonics},
   author={Wen, Ke and Samadi, Payman and Rumley, S{\'e}bastien and Chen, Christine P and Shen, Yiwen and Bahadori, Meisam and Bergman, Keren and Wilke, Jeremiah},
