updated bib file

--- a/reference.bib
+++ b/reference.bib
@@ -1,19 +1,25 @@
+@article{tibshirani2001estimating,
+  title={Estimating the number of clusters in a data set via the gap statistic},
+  author={Tibshirani, Robert and Walther, Guenther and Hastie, Trevor},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={63},
+  number={2},
+  pages={411--423},
+  year={2001},
+  publisher={Wiley Online Library},
+}
+
 @inproceedings{kassing2017beyond,
  author = {Kassing, Simon and Valadarsky, Asaf and Shahaf, Gal and Schapira, Michael and Singla, Ankit},
  title = {Beyond Fat-trees Without Antennae, Mirrors, and Disco-balls},
- booktitle = {Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
- series = {SIGCOMM '17},
+ booktitle={SIGCOMM},
  year = {2017},
  isbn = {978-1-4503-4653-5},
  location = {Los Angeles, CA, USA},
  pages = {281--294},
  numpages = {14},
- url = {http://doi.acm.org/10.1145/3098822.3098836},
- doi = {10.1145/3098822.3098836},
- acmid = {3098836},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {Data center, Routing, Topology},
 } 
 
 @article{halperin2011augmenting,
@@ -28,12 +34,9 @@
  issn = {0146-4833},
  pages = {38--49},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/2043164.2018442},
- doi = {10.1145/2043164.2018442},
  acmid = {2018442},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {60 ghz, 802.11ad, data center, datacenter, flyways, network},
 } 
 
 @article{dukkipati2006flowcompletiontime,
@@ -216,7 +219,7 @@
   title={Characterizing the algorithmic complexity of reconfigurable data center architectures},
   booktitle={Proc. ANCS},
   author={Foerster, Klaus-Tycho and Ghobadi, Manya and Schmid, Stefan},
-  year={2018}
+  year={2018},
 }
 
 @inproceedings{zhao2018minimal,
@@ -259,7 +262,7 @@
   volume = {3},
   number = {1},
   pages = {1--122},
-  publisher = {ACM}
+  publisher = {ACM},
 }
 
 @Inbook{ConvexOptimization,
@@ -274,7 +277,7 @@
   title={Minimization Methods for Non-differentiable Functions},
   year={1985},
   publisher={Springer-Verlag},
-  address={New York}
+  address={New York},
 }
 
 @inproceedings{osqp-codegen,
