--- a/reference.bib
+++ b/reference.bib
@@ -630,6 +630,12 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   booktitle     = {https://en.wikipedia.org/wiki/Cosine\_similarity}
 }
 
+@inproceedings{ProjectSirius,
+  title = {Project Sirius},
+  author   = {{Microsoft Research}},
+  booktitle     = {https://www.microsoft.com/en-us/research/project/sirius/}
+}
+
 @inproceedings{BoxPlot,
   title = {Box Plot},
   author = {{Wikipedia}},
