--- a/reference.bib
+++ b/reference.bib
@@ -642,6 +642,16 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   booktitle = {https://en.wikipedia.org/wiki/Box\_plot}
 }
 
+@article{SilhouetteMethod,
+  title={Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
+  author={Rousseeuw, Peter J},
+  journal={Journal of computational and applied mathematics},
+  volume={20},
+  pages={53--65},
+  year={1987},
+  publisher={Elsevier}
+}
+
 @article{leiserson1985fat,
   title={Fat-trees: universal networks for hardware-efficient supercomputing},
   author={Leiserson, Charles E},
