added new references

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,19 @@
+@inproceedings{gurobi,
+  author = {Gurobi Optimization, LLC},
+  title = {Gurobi Optimizer Reference Manual},
+  year = {2019},
+  booktitle = {"http://www.gurobi.com"},
+}
+
+@inproceedings{al2010hedera,
+  title={Hedera: dynamic flow scheduling for data center networks.},
+  author={Al-Fares, Mohammad and Radhakrishnan, Sivasankar and Raghavan, Barath and Huang, Nelson and Vahdat, Amin and others},
+  booktitle={Nsdi},
+  volume={10},
+  number={2010},
+  year={2010}
+}
+
 @article{tibshirani2001estimating,
   title={Estimating the number of clusters in a data set via the gap statistic},
   author={Tibshirani, Robert and Walther, Guenther and Hastie, Trevor},
