added a new figure on static uniform meshes, and added a reference on expander graphs

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,12 @@
+@article{goldreich2011basic,
+  title={Basic facts about expander graphs},
+  author={Goldreich, Oded},
+  booktitle={Studies in Complexity and Cryptography. Miscellanea on the Interplay between Randomness and Computation},
+  pages={451--464},
+  year={2011},
+  publisher={Springer}
+}
+
 @inproceedings{gurobi,
   author = {Gurobi Optimization, LLC},
   title = {Gurobi Optimizer Reference Manual},
