added new references

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,20 @@
+@article{martins2003new,
+  title={A new implementation of Yen's ranking loopless paths algorithm},
+  author={Martins, Ernesto QV and Pascoal, Marta MB},
+  journal={Quarterly Journal of the Belgian, French and Italian Operations Research Societies},
+  volume={1},
+  number={2},
+  pages={121--133},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{hopps2000analysis,
+  title={Analysis of an equal-cost multi-path algorithm},
+  author={Hopps, Christian E},
+  year={2000}
+}
+
 @article{goldreich2011basic,
   title={Basic facts about expander graphs},
   author={Goldreich, Oded},
