added new references

--- a/reference.bib
+++ b/reference.bib
@@ -9,6 +9,42 @@
   publisher={Springer}
 }
 
+@inproceedings{bogle2019teavar,
+ author = {Bogle, Jeremy and Bhatia, Nikhil and Ghobadi, Manya and Menache, Ishai and Bj{\o}rner, Nikolaj and Valadarsky, Asaf and Schapira, Michael},
+ title = {TEAVAR: Striking the Right Utilization-availability Balance in WAN Traffic Engineering},
+ booktitle = {Proceedings of the 2019 Conference of the ACM Special Interest Group on Data Communication},
+ year = {2019},
+ pages = {29--43},
+ organization = {ACM},
+} 
+
+@inproceedings{hong2018b4,
+  title={B4 and after: managing hierarchy, partitioning, and asymmetry for availability and scale in google's software-defined WAN},
+  author={Hong, Chi-Yao and Mandal, Subhasree and Al-Fares, Mohammad and Zhu, Min and Alimi, Richard and Bhagat, Chandan and Jain, Sourabh and Kaimal, Jay and Liang, Shiyu and Mendelev, Kirill and others},
+  booktitle={Proceedings of the 2018 Conference of the ACM Special Interest Group on Data Communication},
+  pages={74--87},
+  year={2018},
+  organization={ACM}
+}
+
+@inproceedings{mogul2017thinking,
+  title={Thinking about availability in large service infrastructures},
+  author={Mogul, Jeffrey C and Isaacs, Rebecca and Welch, Brent},
+  booktitle={Proceedings of the 16th Workshop on Hot Topics in Operating Systems},
+  pages={12--17},
+  year={2017},
+  organization={ACM}
+}
+
+@inproceedings{govindan2016evolve,
+  title={Evolve or die: High-availability design principles drawn from googles network infrastructure},
+  author={Govindan, Ramesh and Minei, Ina and Kallahalla, Mahesh and Koley, Bikash and Vahdat, Amin},
+  booktitle={Proceedings of the 2016 ACM SIGCOMM Conference},
+  pages={58--72},
+  year={2016},
+  organization={ACM}
+}
+
 @article{hopps2000analysis,
   title={Analysis of an equal-cost multi-path algorithm},
   author={Hopps, Christian E},
