--- a/reference.bib
+++ b/reference.bib
@@ -755,4 +755,9 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year={2014}
 }
 
-
+@inproceedings{applegate2003making,
+  title={Making Intra-Domain Routing Robust to Changing and Uncertain Traffic Demands: Understanding Fundamental Tradeoffs},
+  author={Applegate, David and Cohen, Edith},
+  booktitle={SIGCOMM},
+  year={2003}
+}
