added new historical similarity file for plotting

--- a/reference.bib
+++ b/reference.bib
@@ -9,6 +9,17 @@
   publisher={Springer}
 }
 
+@article{yen1971finding,
+  title={Finding the k shortest loopless paths in a network},
+  author={Yen, Jin Y},
+  journal={management Science},
+  volume={17},
+  number={11},
+  pages={712--716},
+  year={1971},
+  publisher={INFORMS}
+}
+
 @inproceedings{bogle2019teavar,
  author = {Bogle, Jeremy and Bhatia, Nikhil and Ghobadi, Manya and Menache, Ishai and Bj{\o}rner, Nikolaj and Valadarsky, Asaf and Schapira, Michael},
  title = {TEAVAR: Striking the Right Utilization-availability Balance in WAN Traffic Engineering},
