added new reference

--- a/reference.bib
+++ b/reference.bib
@@ -9,6 +9,15 @@
   publisher={Springer}
 }
 
+@inproceedings{jyothi2016measuring,
+  title={Measuring and understanding throughput of network topologies},
+  author={Jyothi, Sangeetha Abdu and Singla, Ankit and Godfrey, P and Kolla, Alexandra},
+  booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+  pages={65},
+  year={2016},
+  organization={IEEE Press}
+}
+
 @article{yen1971finding,
   title={Finding the k shortest loopless paths in a network},
   author={Yen, Jin Y},
