--- a/reference.bib
+++ b/reference.bib
@@ -228,7 +228,7 @@
 }
 
 @article{irving1994three,
-  title={Three-dimensional statistical data security problems},
+  title={Three-Dimensional Statistical Data Security Problems},
   author={Irving, Robert W and Jerrum, Mark R},
   journal={SIAM Journal on Computing},
   volume={23},
