added new references

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,19 @@
+@inproceedings{chang2017robust,
+  title={Robust validation of network designs under uncertain demands and failures},
+  author={Chang, Yiyang and Rao, Sanjay and Tawarmalani, Mohit},
+  booktitle={14th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 17)},
+  pages={347--362},
+  year={2017}
+}
+
+@inproceedings{kumar2018semi,
+  title={Semi-oblivious traffic engineering: The road not taken},
+  author={Kumar, Praveen and Yuan, Yang and Yu, Chris and Foster, Nate and Kleinberg, Robert and Lapukhov, Petr and Lim, Chiun Lin and Soul{\'e}, Robert},
+  booktitle={15th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 18)},
+  pages={157--170},
+  year={2018}
+}
+
 @article{martins2003new,
   title={A new implementation of Yen's ranking loopless paths algorithm},
   author={Martins, Ernesto QV and Pascoal, Marta MB},
