--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,10 @@
+@article{mellette2019expanding,
+  title={Expanding across time to deliver bandwidth efficiency and low latency},
+  author={Mellette, William M and Das, Rajdeep and Guo, Yibo and McGuinness, Rob and Snoeren, Alex C and Porter, George},
+  journal={arXiv preprint arXiv:1903.12307},
+  year={2019}
+}
+
 @inproceedings{chang2017robust,
   title={Robust validation of network designs under uncertain demands and failures},
   author={Chang, Yiyang and Rao, Sanjay and Tawarmalani, Mohit},
