--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,12 @@
+@inproceedings{wang2006cope,
+  title={COPE: traffic engineering in dynamic networks},
+  author={Wang, Hao and Xie, Haiyong and Qiu, Lili and Yang, Yang Richard and Zhang, Yin and Greenberg, Albert},
+  booktitle={Sigcomm},
+  volume={6},
+  pages={194},
+  year={2006}
+}
+
 @article{mellette2019expanding,
   title={Expanding across time to deliver bandwidth efficiency and low latency},
   author={Mellette, William M and Das, Rajdeep and Guo, Yibo and McGuinness, Rob and Snoeren, Alex C and Porter, George},
