--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,19 @@
+@inproceedings{alizadeh2013pfabric,
+  title={pfabric: Minimal near-optimal datacenter transport},
+  author={Alizadeh, Mohammad and Yang, Shuang and Sharif, Milad and Katti, Sachin and McKeown, Nick and Prabhakar, Balaji and Shenker, Scott},
+  booktitle={ACM SIGCOMM Computer Communication Review},
+  volume={43},
+  number={4},
+  pages={435--446},
+  year={2013},
+  organization={ACM}
+}
+
+@misc{netbench,
+  author = {{Netbench}},
+  howpublished= {https://github.com/ndal-eth/netbench}
+}
+
 @inproceedings{wang2006cope,
   title={COPE: traffic engineering in dynamic networks},
   author={Wang, Hao and Xie, Haiyong and Qiu, Lili and Yang, Yang Richard and Zhang, Yin and Greenberg, Albert},
