added new references

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,12 @@
+@inproceedings{racke2002minimizing,
+  title={Minimizing congestion in general networks},
+  author={Racke, Harald},
+  booktitle={The 43rd Annual IEEE Symposium on Foundations of Computer Science, 2002. Proceedings.},
+  pages={43--52},
+  year={2002},
+  organization={IEEE}
+}
+
 @inproceedings{alizadeh2013pfabric,
   title={pfabric: Minimal near-optimal datacenter transport},
   author={Alizadeh, Mohammad and Yang, Shuang and Sharif, Milad and Katti, Sachin and McKeown, Nick and Prabhakar, Balaji and Shenker, Scott},
