added new references

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,12 @@
+@inproceedings{even1975complexity,
+  title={On the complexity of time table and multi-commodity flow problems},
+  author={Even, Shimon and Itai, Alon and Shamir, Adi},
+  booktitle={16th Annual Symposium on Foundations of Computer Science (sfcs 1975)},
+  pages={184--193},
+  year={1975},
+  organization={IEEE}
+}
+
 @inproceedings{racke2002minimizing,
   title={Minimizing congestion in general networks},
   author={Racke, Harald},
