--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,23 @@
+@inproceedings{zhang2008designing,
+  title={Designing a fault-tolerant network using valiant load-balancing},
+  author={Zhang-Shen, Rui and McKeown, Nick},
+  booktitle={IEEE INFOCOM 2008-The 27th Conference on Computer Communications},
+  pages={2360--2368},
+  year={2008},
+  organization={IEEE}
+}
+
+@article{yen_ksp,
+  title={Finding the k shortest loopless paths in a network},
+  author={Yen, Jin Y},
+  journal={Management Science},
+  volume={17},
+  number={11},
+  pages={712--716},
+  year={1971},
+  publisher={INFORMS}
+}
+
 @inproceedings{even1975complexity,
   title={On the complexity of time table and multi-commodity flow problems},
   author={Even, Shimon and Itai, Alon and Shamir, Adi},
