--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,12 @@
+@inproceedings{wang2004sflow,
+  title={sFlow: Towards resource-efficient and agile service federation in service overlay networks},
+  author={Wang, Mea and Li, Baochun and Li, Zongpeng},
+  booktitle={24th International Conference on Distributed Computing Systems, 2004. Proceedings.},
+  pages={628--635},
+  year={2004},
+  organization={IEEE}
+}
+
 @inproceedings{zhang2008designing,
   title={Designing a fault-tolerant network using valiant load-balancing},
   author={Zhang-Shen, Rui and McKeown, Nick},
