--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,22 @@
+@inproceedings{bojja2016costly,
+  title={Costly circuits, submodular schedules and approximate carath{\'e}odory theorems},
+  author={Bojja Venkatakrishnan, Shaileshh and Alizadeh, Mohammad and Viswanath, Pramod},
+  booktitle={Proceedings of the 2016 ACM SIGMETRICS International Conference on Measurement and Modeling of Computer Science},
+  pages={75--88},
+  year={2016}
+}
+
+@article{wang2018neural,
+  title={Neural network meets DCN: Traffic-driven topology adaptation with deep learning},
+  author={Wang, Mowei and Cui, Yong and Xiao, Shihan and Wang, Xin and Yang, Dan and Chen, Kai and Zhu, Jun},
+  journal={Proceedings of the ACM on Measurement and Analysis of Computing Systems},
+  volume={2},
+  number={2},
+  pages={1--25},
+  year={2018},
+  publisher={ACM New York, NY, USA}
+}
+
 @inproceedings{wang2004sflow,
   title={sFlow: Towards resource-efficient and agile service federation in service overlay networks},
   author={Wang, Mea and Li, Baochun and Li, Zongpeng},
