--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,10 @@
+@article{phaal2001inmon,
+  title={InMon corporation?s sFlow: A method for monitoring traffic in switched and routed networks},
+  author={Phaal, Peter and Panchen, Sonia and McKee, Neil},
+  year={2001},
+  publisher={RFC 3176}
+}
+
 @inproceedings{bojja2016costly,
   title={Costly circuits, submodular schedules and approximate carath{\'e}odory theorems},
   author={Bojja Venkatakrishnan, Shaileshh and Alizadeh, Mohammad and Viswanath, Pramod},
