--- a/reference.bib
+++ b/reference.bib
@@ -99,8 +99,8 @@
 @article{mellette2019expanding,
   title={Expanding across time to deliver bandwidth efficiency and low latency},
   author={Mellette, William M and Das, Rajdeep and Guo, Yibo and McGuinness, Rob and Snoeren, Alex C and Porter, George},
-  journal={arXiv preprint arXiv:1903.12307},
-  year={2019}
+  booktitle={NSDI},
+  year={2020}
 }
 
 @inproceedings{chang2017robust,
