--- a/reference.bib
+++ b/reference.bib
@@ -96,7 +96,7 @@
   year={2006}
 }
 
-@article{mellette2019expanding,
+@inproceedings{mellette2019expanding,
   title={Expanding across time to deliver bandwidth efficiency and low latency},
   author={Mellette, William M and Das, Rajdeep and Guo, Yibo and McGuinness, Rob and Snoeren, Alex C and Porter, George},
   booktitle={NSDI},
