--- a/reference.bib
+++ b/reference.bib
@@ -733,6 +733,11 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   howpublished= {https://www.calient.net/}
 }
 
+@misc{huawei,
+  author = {{Huawei,}},
+  howpublished = {https://e.huawei.com/us/products/enterprise-networking/switches/data-center-switches/ce12800}
+}
+
 @article{lee2014monolithic,
   title={Monolithic silicon integration of scaled photonic switch fabrics, CMOS logic, and device driver circuits},
   author={Lee, Benjamin G and Rylyakov, Alexander V and Green, William MJ and Assefa, Solomon and Baks, Christian W and Rimolo-Donadio, Renato and Kuchta, Daniel M and Khater, Marwan H and Barwicz, Tymon and Reinholm, Carol and others},
