--- a/reference.bib
+++ b/reference.bib
@@ -728,6 +728,14 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year = {2016}
 }
 
+@article{singlemodefiber2019,
+	title = {Navigating Cabling Options for Enterprise and Cloud Data Centers},
+	author = {Bernstein, Gary},
+	journal = {Leviton Network Solutions},
+  year = {2019},
+	howpublished = {https://dcd.events/uploads/partner_1456_document.PDF}
+}
+
 @misc{calient,
   author = {{CALIENT Technologies, Inc.}},
   howpublished= {https://www.calient.net/}
