--- a/reference.bib
+++ b/reference.bib
@@ -1,5 +1,5 @@
 @article{phaal2001inmon,
-  title={InMon corporation?s sFlow: A method for monitoring traffic in switched and routed networks},
+  title={InMon corporation's sFlow: A method for monitoring traffic in switched and routed networks},
   author={Phaal, Peter and Panchen, Sonia and McKee, Neil},
   year={2001},
   publisher={RFC 3176}
@@ -27,7 +27,7 @@
 @inproceedings{wang2004sflow,
   title={sFlow: Towards resource-efficient and agile service federation in service overlay networks},
   author={Wang, Mea and Li, Baochun and Li, Zongpeng},
-  booktitle={24th International Conference on Distributed Computing Systems, 2004. Proceedings.},
+  booktitle={24th International Conference on Distributed Computing Systems},
   pages={628--635},
   year={2004},
   organization={IEEE}
@@ -36,7 +36,7 @@
 @inproceedings{zhang2008designing,
   title={Designing a fault-tolerant network using valiant load-balancing},
   author={Zhang-Shen, Rui and McKeown, Nick},
-  booktitle={IEEE INFOCOM 2008-The 27th Conference on Computer Communications},
+  booktitle={INFOCOM},
   pages={2360--2368},
   year={2008},
   organization={IEEE}
@@ -536,7 +536,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @inproceedings{zhang2005finding,
   title={Finding critical traffic matrices},
   author={Zhang, Yin and Ge, Zihui},
-  booktitle={Dependable Systems and Networks, 2005. DSN 2005. Proceedings. International Conference on},
+  booktitle={International Conference on Dependable Systems and Networks},
   year={2005}
 }
 
@@ -728,12 +728,12 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   year = {2016}
 }
 
-@article{singlemodefiber2019,
+@inproceedings{singlemodefiber2019,
 	title = {Navigating Cabling Options for Enterprise and Cloud Data Centers},
 	author = {Bernstein, Gary},
-	journal = {Leviton Network Solutions},
+	booktitle = {Leviton Network Solutions},
   year = {2019},
-	howpublished = {https://dcd.events/uploads/partner_1456_document.PDF}
+	howpublished = {https://dcd.events/uploads/partner\_1456\_document.PDF}
 }
 
 @misc{calient,
