--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,9 @@
+@misc{andreyev2014introducing,
+  title={Introducing data center fabric, the next-generation Facebook data center network},
+  author={Andreyev, Alexey},
+  year={2014}
+}
+
 @inproceedings{alizadeh2010data,
   title={Data center tcp (dctcp)},
   author={Alizadeh, Mohammad and Greenberg, Albert and Maltz, David A and Padhye, Jitendra and Patel, Parveen and Prabhakar, Balaji and Sengupta, Sudipta and Sridharan, Murari},
