--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,8 @@
+@misc{anonrepo,
+  title={Anonymized for double blind review},
+  author={Anonymous}
+}
+
 @misc{andreyev2014introducing,
   title={Introducing data center fabric, the next-generation Facebook data center network},
   author={Andreyev, Alexey},
